Refactoring links and add login form and registration

--- a/strona/index.html
+++ b/strona/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <!-- Font Awesome -->
@@ -144,9 +142,9 @@
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
 
-  <link rel='canonical' href='https://html.design/demo/timups/index.html' />
+  <link rel='canonical' href='http://localhost/WebDevelopment/strona/index.html' />
   <script type="text/javascript">var ezouid = "1";</script>
-  <base href="https://html.design/demo/timups/index.html">
+  <base href="http://localhost/WebDevelopment/strona/index.html">
   <script type='text/javascript'>
     var ezoTemplate = 'old_site_noads';
     if (typeof ezouid == 'undefined') {
@@ -249,7 +247,7 @@
             </ul>
             <div class="user_option-box">
               <a href="">
-                <i class="fa fa-user" aria-hidden="true"></i>
+                <i class="fa fa-user"  href="logginform.html" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-cart-plus" aria-hidden="true"></i>
