Add php login file to check if user is in database

--- a/strona/index.html
+++ b/strona/index.html
@@ -246,8 +246,8 @@
               </li>
             </ul>
             <div class="user_option-box">
-              <a href="">
-                <i class="fa fa-user"  href="logginform.html" aria-hidden="true"></i>
+              <a href="logginform.html">
+                <i class="fa fa-user"  href="" aria-hidden="true"></i>
               </a>
               <a href="">
                 <i class="fa fa-cart-plus" aria-hidden="true"></i>
